app/assets/stylesheets/zammad.css.scss
/* ... */
kbd {
  background: hsl(200,8%,90%);
  border-radius: 3px;
  border: 1px solid hsl(240,7%,77%);
  box-shadow: 0 1px rgba(0,0,0,.08);
  color: hsl(240,7%,37%);
  display: inline-block;
  font-size: 12px;
  margin: 0 1px;
  padding: 0 4px;
  vertical-align: top;
}

.form-stacked .checkbox label {
  color: inherit;
  font-size: 13px;
  text-transform: inherit;
  vertical-align: baseline;
  letter-spacing: inherit;
}

.pagination {
  margin: 0 0 0 19px;
  display: flex;
}

.pagination > li > a, 
.pagination > li > span {
  padding: 0;
  width: 31px;
  height: 31px;
  border-color: #e5e5e5;
}

.pagination > .active > a, 
.pagination > .active > span, 
.pagination > .active > a:hover, 
.pagination > .active > span:hover, 
.pagination > .active > a:focus, 
.pagination > .active > span:focus {
  background: #0F94D6;
  border-color: #0F94D6;
}

.pagination-counter {
  margin: 0 0 0 19px;
  line-height: 33px;
  color: #9c9c9b;
}

.pagination-items-range {
  color: #706f6f;
}

.page-header {
  margin: 0 0 15px;
  padding: 0;
  border: none;
  display: flex;
  align-items: center;
  flex-wrap: wrap;
}

.page-header-title h1 {
  margin-top: 9px;
}

.page-header-meta {
  margin-left: auto;
  padding-left: 9px;
  display: flex;

  .btn + .btn {
    margin-left: 9px;
  }
}

.dropdown-menu .count {
  padding-top: 1px;
  margin-left: 10px;
}

.help-block {
  margin: 0;
  color: #bcbcbc;
  
  &.help-block--center {
    text-align: center;
  }
}

.help-block:not(:empty) {
  margin: 8px 2px 10px;
}

/* replace music icon with attachment */
.icon-attachment {
  background-position: -24px 0;
}

/*
 * hero-unit (used on getstarted, login, signup)
 */

.hero-unit {
  width: 500px;
  margin: 10px 0;
  padding: 23px 25px;
  border: 1px solid #e5f0f5;
  color: inherit;
  background-color: white;
  border-radius: 6px;
  box-shadow:
    0 8px 17px 0 rgba(0, 0, 0, 0.2),
    0 6px 20px 0 rgba(0, 0, 0, 0.19);
  
  label {
    color: hsl(0,0%,60%);
  }

  .inline-label {
    font-size: inherit;
  }
}

  .hero-unit h1,
  .hero-unit h2 {
    margin-top: 0;
  }

.getstarted,
.reset_password,
.signup,
.darkBackground,
.login {
  padding: 10px;
  background: hsl(234,10%,19%);
}

.content.getstarted {
  padding: 0;

  .main {
    padding: 20px 10px;
  }
}

.login {
  padding: 24px 24px 97px;
  color: hsl(212,8%,40%);

  a {
    color: hsl(229,2%,51%);
  }

  &.login--fancy {
    color: hsla(0,0%,100%,.7);
    background:
      radial-gradient(circle at 49.06% 50.5%, #a36f71, transparent 74%),
      radial-gradient(circle at 6.95% 9.56%, #745479, transparent 100%),
      radial-gradient(circle at 2.58% 98.57%, #392e3e, transparent 51%),
      radial-gradient(circle at 82.11% 97.15%, #5c404e, transparent 100%),
      radial-gradient(circle at 50% 50%, #8b6b76, #8b6b76 100%);
      
    a {
      color: white;
    }

    .hero-unit {
      box-shadow: 
        0 8px 17px 0 rgba(0, 0, 0, 0.1),
        0 6px 20px 0 rgba(0, 0, 0, 0.09);
    }
  }
}

.login .hero-unit {
  width: 430px;
  margin: 0 0 28px;
}

  .login .company-logo {
    max-height: 100px;
    max-width: 200px;
    margin: 20px auto 42px;
    display: block;
  }

  .login p {
    margin: 0 auto 22px;
    max-width: 400px;
    text-align: center;
  }

  .login hr {
    margin: 0 auto 22px;
    border-top-color: hsl(240,5%,27%);
    width: 100%;
    max-width: 400px;
  }

  .login p a {
    text-decoration: underline;
  }

.poweredBy {
  display: flex;
  align-items: center;
  justify-content: center;
  color: hsl(233,7%,26%);
  margin: auto 0 34px -16px;
  cursor: default;
  position: absolute;
  bottom: 0;
  left: 0;
  right: 0;
  
  .logo {
    margin-right: 8px;
    margin-top: -11px;
  }

  .logotype {
    margin-left: 8px;
    margin-top: -5px;
    fill: hsl(225,9%,27%);
  }
}

.fullscreen {
  @extend .fit;
  display: table;
  width: 100%;
  height: 100%;
  min-height: 100vh;
}

.fullscreen p {
  color: hsl(212,8%,40%);
}

.fullscreen-center {
  display: table-cell;
  vertical-align: middle;
  text-align: center;
}

.fullscreen-body {
  text-align: left;
  display: inline-block;
}

ol.tabs {
  list-style: decimal inside;
}

ol.tabs li {
  display: list-item;
}

.tabs {
  padding: 0;
  margin-bottom: 20px;
  color: #b8b8b8;
  border: 1px solid rgba(0,8,14,.08);
  border-radius: 3px;
}

  .tabs-condensed .tab {
    padding-left: 5px;
    padding-right: 5px;
  }

  .progress-tabs .tab {
    cursor: default;
  }

  .tab {
    height: 40px;
    padding: 10px 20px;
    text-align: center;
    border-right: 1px solid rgba(0,8,14,.08);
    flex: 1 1 auto;
    @extend .u-clickable;
  }

  .tab.active {
    color: white;
    background: #444a4f;
    box-shadow: none;
  }

  .tab:first-child {
    border-radius: 3px 0 0 3px;
  }

  .tab:last-child {
    border-radius: 0 3px 3px 0;
    border-right: none;
  }

  .wide-tabs {
    margin: 25px auto 20px;
    font-size: 15px;
    font-weight: 300;
    background: white;
    border-radius: 8px;
  }

  .dashboard .wide-tabs {
    width: 60%;
  }

  .wide-tabs .tab:first-child {
    border-radius: 8px 0 0 8px;
  }

  .wide-tabs .tab:last-child {
    border-radius: 0 8px 8px 0;
  }

.separator {
  margin: 20px 0;
  position: relative;
  text-align: center;
}

  .separator:before {
    content: "";
    position: absolute;
    width: 100%;
    height: 1px;
    top: 50%;
    left: 0;
    background: #e6e6e6;
  }

  .separator-text {
    padding: 0 10px;
    color: #999;
    font-size: 12px;
    letter-spacing: 0.05em;
    text-transform: uppercase;
    background: white;
    display: inline-block;
    position: relative;
  }

.auth-providers {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
  margin-bottom: -10px;
}
/* ... */

